# dm-Reverb

./: .gitignore  README.md
.github/workflows/: build.yml  dm-reverb.mk  readme-Linux.txt  readme-Windows.txt  readme-macOS.txt
lv2/: Cargo.toml
lv2/dm-Reverb.lv2/: dm-Reverb.ttl
lv2/src/: lib.rs
nih-plug/src/: editor.rs  lib.rs  reverb_parameters.rs
nih-plug/src/editor/: style.css  ui_data.rs
profiling/: Cargo.toml
profiling/benches/: early_rf_bench.rs  reverb_bench.rs  taps_bench.rs
profiling/src/: main.rs
reverb/: Cargo.toml
reverb/src/: lib.rs  mix.rs  params.rs  predelay.rs  reverb.rs  reverse.rs  smooth_parameters.rs  taps.rs  tilt_filter.rs
reverb/src/predelay/: reverse.rs
reverb/src/shared/: delay_line.rs  float_ext.rs  one_pole_filter.rs  param_filter.rs  stereo_delay_line.rs
reverb/src/smooth_parameters/: smooth.rs
reverb/src/taps/: average.rs  dc_block.rs  delay_read.rs  early_reflections.rs  grains.rs  one_pole_filter.rs  saturation.rs  saturation_activator.rs  shimmer.rs  tap.rs
reverb/src/taps/tap/: allpass_filter.rs  grains.rs  one_pole_filter.rs
reverb/src/taps/tap/grains/: delta.rs
reverb/src/tilt_filter/: bilinear_transform.rs  biquad_filter.rs
scripts/: build-lv2-for-mod-desktop-mac.sh
sketches/transfer-functions/: tilt.asc  tilt.py
vst/: Cargo.toml
vst/src/: lib.rs
vst/src/editor/components/: param_knob.rs
