[package]
name = "dm_reverb"
version = "0.1.0"
authors = ["davemollen <davemollen@gmail.com>"]
edition = "2021"

[dependencies]
# TODO: merge to main branch when in-place processing works
lv2 = { git = "https://github.com/davemollen/rust-lv2.git", branch = "feature/in-place-processing", features = [
    "minimal_plugin",
] }
reverb = { path = "../reverb" }

[lib]
crate-type = ["cdylib"]
